Bug 475201 - Encrypted EXT4 USB HDD partitions created by KDE Partition Manager are read-only.
Summary: Encrypted EXT4 USB HDD partitions created by KDE Partition Manager are read-o...
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.04.3
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Andrius Štikonas
URL: https://invent.kde.org/system/kpmcore...
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-04 04:06 UTC by Derek
Modified: 2023-11-28 22:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Derek 2023-10-04 04:06:32 UTC
SUMMARY
KDE Partition Manager creates encrypted EXT4 USB HDD partitions that are read only as the user - requires sudo to be able to write.

STEPS TO REPRODUCE
1. Insert USB HDD (do not mount)
2. Open KDE Partition Manager
3. Identify HDD, delete existing partitions (and if desired, partition table).
4. Create new partition (and table if removed), select EXT4 w/LUKS encryption.
6. Provide password.
7. Selecting either "everybody" or "root" doesn't make a difference for this issue (i tried both).
8. Finalise partition creation.
9. Mount HDD, input password.
10. HDD mounts in /run/media/[user]/[label]
11. Try to create/copy a file using Dolphin or Terminal as user.

OBSERVED RESULT
- As the user - read access works, write access = permission denied in terminal. In Dolphin, the 'new' or 'paste' option is greyed out or not present.
- Using sudo, i could write files via the terminal.

EXPECTED RESULT
Should be able to copy files or create files as user.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  Nobara 38
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.109.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
I performed the relevant procedure in gnome-disk-utility with the same hardware, and it worked as expected. I could write files to the HDD after i mount and input the password.
Comment 1 Andrius Štikonas 2023-11-28 22:51:20 UTC
Git commit 5b3de00b164f21c39dda05b7769b2a3bc0ffe259 by Andrius Štikonas.
Committed on 26/11/2023 at 19:37.
Pushed by stikonas into branch 'master'.

Add support for setting permissions on LUKS encrypted file systems.

M  +5    -0    src/fs/luks.cpp
M  +4    -0    src/fs/luks.h
M  +7    -1    src/jobs/changepermissionsjob.cpp

https://invent.kde.org/system/kpmcore/-/commit/5b3de00b164f21c39dda05b7769b2a3bc0ffe259