Add support for setting permissions on LUKS encrypted file systems.

BUG: 475201